--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -1,7 +1,66 @@
+.all{
+    background-image: url('/assets/images/main-fondo.jpg');
+}
+.cont-items{
+    text-align: center; 
+
+}
+
+h2{
+    background-color: burlywood !important;
+    margin-right: 20%;
+    margin-left: 20%;
+    font-family: 'Cinzel', serif;
+    font-size: 24px;
+}
+.mrg{
+    margin-left: 0.5rem;
+    margin-bottom: 10px;
+}
+.params{
+    display: inline-block;
+    text-align: center;
+
+}
+
+.margen-top{
+   margin-top: 25px;
+} 
+.card{
+    margin: 5px;
+    padding: 0;
+    width: 16rem;
+    border-radius: 10px;
+    display: inline-block;
+}
+.card-title{
+    font-family: 'Cinzel', serif;
+    font-size: 20px;
+    background-color: rgb(217, 233, 243);
+}
+
+.color{
+    font-family: 'Caveat', cursive !important;
+    font-size: 19px !important;
+    font-family: 'Francois One', sans-serif;
+
+    color: rgb(30, 43, 228);
+}
+
+.bold{
+    font-weight: bold;
+    color: black;
+}
+
 small{
     font-size: 14px;
     margin-left:10px;
     margin-right:10px;
+}
+
+.material-icons{
+    font-size: 35px;
+    width: 35px;
 }
 
 .salir{
@@ -11,21 +70,22 @@ small{
     color: blanchedalmond;
 }
 /*---------------------------------------------------*/
-/* Fondo y IMG*/
 
 /* Botones y Margenes*/
 .btn-verMas{
+    font-family: Georgia, 'Times New Roman', Times, serif;
     margin-left: 15px;
 }
 .btn-añadir{
-    margin-left: 25px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    margin-left: 30px;
 }
 .row footer{
 display: inline-block;   
 }
 
 .margInput{
-    margin: 5px 0 0 5px;
+    margin: 0px 0 0 2px;
 }
 
 
@@ -36,5 +96,5 @@ input{
     text-align: center;
 }
 .form-control{
-    display: inline-flex;
+    display: inline-block;
 }
