--- a/src/app/pages/registro/registro.component.html
+++ b/src/app/pages/registro/registro.component.html
@@ -1,32 +1,31 @@
 <div class="limiter animated fadeInRight">
         <div class="container-login100">
             <div class="wrap-login100 p-t-50 p-b-90">
-                
+                <div class="container">
                 <form (ngSubmit)="onSubmit( f )"
-                      #f="ngForm"
-                      class="login100-form validate-form flex-sb flex-w">
+                #f ="ngForm"
+                class="login100-form validate-form flex-sb flex-w">
     
                     <span class="login100-form-title p-b-51">
                         Crear nueva cuenta
                     </span>
     
                     <span *ngIf="f.submitted && f.controls['email'].errors"
-                          class="text-danger animated fadeIn">El correo es obligatorio</span>
-
+                    class="text-danger animated fadeIn">El correo es obligatorio</span>
                     <div class="wrap-input100 m-b-16">
                         <input class="input100" 
                                type="email" 
-                               name="email"
-                               [(ngModel)]="usuario.email"
+                               minlength="7"
+                               name="email" 
                                required
-                               email
-                               placeholder="Email">
+                               [(ngModel)]="usuario.email"
+                                placeholder="Email">
     
                         <span class="focus-input100"></span>
                     </div>
 
                     <span *ngIf="f.submitted && f.controls['nombre'].errors"
-                          class="text-danger animated fadeIn">El nombre es obligatorio</span>
+                    class="text-danger animated fadeIn">El nombre es obligatorio</span>
                     <div class="wrap-input100 m-b-16">
                         <input class="input100" 
                                type="text" 
@@ -40,23 +39,22 @@
                     </div>
                     
                     <span *ngIf="f.submitted && f.controls['password'].errors"
-                          class="text-danger animated fadeIn">Al menos 6 letras</span>
+                    class="text-danger animated fadeIn">6 caracteres como minimo</span>
                     <div class="wrap-input100 m-b-16">
                         <input class="input100"
                                type="password" 
                                name="password" 
                                [(ngModel)]="usuario.password"
-                               minlength="6"
+                               minlength="4"
                                required
                                placeholder="Password">
-
                         <span class="focus-input100"></span>
                     </div>
                     
                     <div class="flex-sb-m w-full p-t-3 p-b-24">
                         <div class="contact100-form-checkbox">
                             <input [(ngModel)]="recordarme"
-                                   class="input-checkbox100" id="ckb1" type="checkbox" name="remember-me">
+                            class="input-checkbox100" id="ckb1" type="checkbox" name="remember-me">
                             <label class="label-checkbox100" for="ckb1">
                                 Recordar mi usuario
                             </label>
@@ -76,6 +74,7 @@
                     </div>
     
                 </form>
+                </div>
             </div>
         </div>
     </div>
